Fixed z-index of heading during section transition

--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -7,7 +7,7 @@
   padding-inline: 1rem;
   display: flex;
   font-family: $lexend;
-  z-index: 1000;
+  z-index: 99;
 }
 .headerButtons{
   width: 100%;
