--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -67,7 +67,7 @@ input {
   height: 1000vh;
   position: fixed;
   opacity: 1;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .sectionTransition-enter-active {
@@ -110,6 +110,34 @@ input {
     background-color: rgb(0, 0, 0);
   }
 }
+.headerTransition-enter-from {
+  opacity: 0;
+  transform: translateY(-100%);
+}
+
+.headerTransition-enter-to {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.headerTransition-enter-active {
+  transition: all 0.5s;
+}
+
+.headerTransition-leave-from {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.headerTransition-leave-to {
+  opacity: 0;
+  transform: translateY(-100%);
+}
+
+.headerTransition-leave-active {
+  transition: all 0.5s;
+}
+
 .section {
   position: relative;
   background-color: black;
@@ -158,7 +186,7 @@ input {
   padding-inline: 1rem;
   display: flex;
   font-family: "Lexend", sans-serif;
-  z-index: 1000;
+  z-index: 99;
 }
 
 .headerButtons {
