--- a/assets/styles/utilities/_section-transition.scss
+++ b/assets/styles/utilities/_section-transition.scss
@@ -4,7 +4,7 @@
   position: fixed;
   //background-color: black;
   opacity: 1;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .sectionTransition-enter-active{
